@@ -4,9 +4,7 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -26,7 +24,7 @@
 /*
  * @test
  * @summary Testing Classfile stack maps generator.
- * @bug 8305990
+ * @bug 8305990 8320222 8320618
  * @build testdata.*
  * @run junit StackMapsTest
  */
@@ -40,12 +38,11 @@ import java.nio.file.Files;
 import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.*;
 import static helpers.TestUtil.assertEmpty;
-import static org.glavo.classfile.Classfile.ACC_STATIC;
+import static org.glavo.classfile.ClassFile.ACC_STATIC;
 
 import java.lang.constant.ClassDesc;
 import java.lang.constant.ConstantDescs;
 import java.lang.constant.MethodTypeDesc;
-import java.util.List;
 import org.glavo.classfile.AccessFlag;
 
 /**
@@ -54,9 +51,9 @@ import org.glavo.classfile.AccessFlag;
 class StackMapsTest {
 
     private byte[] buildDeadCode() {
-        return Classfile.build(
+        return ClassFile.of(ClassFile.StackMapsOption.DROP_STACK_MAPS,
+                                    ClassFile.DeadCodeOption.KEEP_DEAD_CODE).build(
                 ClassDesc.of("DeadCodePattern"),
-                List.of(Classfile.Option.generateStackmap(false), Classfile.Option.patchDeadCode(false)),
                 clb -> clb.withMethodBody(
                                 "twoReturns",
                                 MethodTypeDesc.of(ConstantDescs.CD_void),
@@ -79,7 +76,7 @@ class StackMapsTest {
                                     cob.exceptionCatch(cob.startLabel(), deadStart, handler, ConstantDescs.CD_Throwable);
                                     //exception block after dead code to stay untouched
                                     cob.exceptionCatch(deadEnd, handler, handler, ConstantDescs.CD_Throwable);
-                                    //exception block overlapping dead code to cut from right
+                                     //exception block overlapping dead code to cut from right
                                     cob.exceptionCatch(cob.startLabel(), deadEnd, handler, ConstantDescs.CD_Throwable);
                                     //exception block overlapping dead code to from left
                                     cob.exceptionCatch(deadStart, handler, handler, ConstantDescs.CD_Throwable);
@@ -97,16 +94,16 @@ class StackMapsTest {
 
     @Test
     void testDeadCodePatternFail() throws Exception {
-        var error = assertThrows(IllegalStateException.class, () -> testTransformedStackMaps(buildDeadCode(), Classfile.Option.patchDeadCode(false)));
+        var error = assertThrows(IllegalArgumentException.class, () -> testTransformedStackMaps(buildDeadCode(), ClassFile.DeadCodeOption.KEEP_DEAD_CODE));
         assertLinesMatch(
-                """
-                Unable to generate stack map frame for dead code at bytecode offset 1 of method twoReturns()
-                >> more lines >>
-                    0: {opcode: RETURN}
-                    1: {opcode: RETURN}
-                """.lines(),
-                error.getMessage().lines(),
-                error.getMessage()
+            """
+            Unable to generate stack map frame for dead code at bytecode offset 1 of method twoReturns()
+            >> more lines >>
+                0: {opcode: RETURN}
+                1: {opcode: RETURN}
+            """.lines(),
+            error.getMessage().lines(),
+            error.getMessage()
         );
     }
 
@@ -172,87 +169,147 @@ class StackMapsTest {
 
     @Test
     void testFrameOutOfBytecodeRange() {
-        var error = assertThrows(IllegalStateException.class, () ->
-                Classfile.parse(
-                        Classfile.build(ClassDesc.of("TestClass"), clb ->
-                                clb.withMethodBody("frameOutOfRangeMethod", MethodTypeDesc.of(ConstantDescs.CD_void), 0, cob -> {
-                                    var l = cob.newLabel();
-                                    cob.goto_(l);//jump to the end of method body triggers invalid frame creation
-                                    cob.labelBinding(l);
-                                }))));
+        var cc = ClassFile.of();
+        var error = assertThrows(IllegalArgumentException.class, () ->
+        cc.parse(
+                cc.build(ClassDesc.of("TestClass"), clb ->
+                        clb.withMethodBody("frameOutOfRangeMethod", MethodTypeDesc.of(ConstantDescs.CD_void), 0, cob -> {
+                            var l = cob.newLabel();
+                            cob.goto_(l);//jump to the end of method body triggers invalid frame creation
+                            cob.labelBinding(l);
+                        }))));
         assertLinesMatch(
-                """
-                Detected branch target out of bytecode range at bytecode offset 0 of method frameOutOfRangeMethod()
-                >> more lines >>
-                    0: {opcode: GOTO, target: 3}
-                """.lines(),
-                error.getMessage().lines(),
-                error.getMessage()
+            """
+            Detected branch target out of bytecode range at bytecode offset 0 of method frameOutOfRangeMethod()
+            >> more lines >>
+                0: {opcode: GOTO, target: 3}
+            """.lines(),
+            error.getMessage().lines(),
+            error.getMessage()
         );
     }
 
     @Test
     void testMethodSwitchFromStatic() {
         assertThrows(IllegalArgumentException.class, () ->
-                Classfile.build(ClassDesc.of("TestClass"), clb ->
-                        clb.withMethod("testMethod", MethodTypeDesc.of(ConstantDescs.CD_Object, ConstantDescs.CD_int),
-                                ACC_STATIC,
-                                mb -> mb.withCode(cob -> {
-                                            var t = cob.newLabel();
-                                            cob.aload(0).goto_(t).labelBinding(t).areturn();
-                                        })
-                                        .withFlags())));
+        ClassFile.of().build(ClassDesc.of("TestClass"), clb ->
+                clb.withMethod("testMethod", MethodTypeDesc.of(ConstantDescs.CD_Object, ConstantDescs.CD_int),
+                               ACC_STATIC,
+                               mb -> mb.withCode(cob -> {
+                                           var t = cob.newLabel();
+                                           cob.aload(0).goto_(t).labelBinding(t).areturn();
+                                       })
+                                       .withFlags())));
     }
 
     @Test
     void testMethodSwitchToStatic() {
         assertThrows(IllegalArgumentException.class, () ->
-                Classfile.build(ClassDesc.of("TestClass"), clb ->
-                        clb.withMethod("testMethod", MethodTypeDesc.of(ConstantDescs.CD_int, ConstantDescs.CD_int),
-                                0, mb ->
-                                        mb.withCode(cob -> {
-                                                    var t = cob.newLabel();
-                                                    cob.iload(0).goto_(t).labelBinding(t).ireturn();
-                                                })
-                                                .withFlags(AccessFlag.STATIC))));
+        ClassFile.of().build(ClassDesc.of("TestClass"), clb ->
+                clb.withMethod("testMethod", MethodTypeDesc.of(ConstantDescs.CD_int, ConstantDescs.CD_int),
+                               0, mb ->
+                                       mb.withCode(cob -> {
+                                             var t = cob.newLabel();
+                                             cob.iload(0).goto_(t).labelBinding(t).ireturn();
+                                         })
+                                         .withFlags(AccessFlag.STATIC))));
     }
 
     @Test
     void testClassVersions() throws Exception {
-        var actualVersion = Classfile.parse(StackMapsTest.class.getResourceAsStream("/testdata/Pattern1.class").readAllBytes());
+        var cc = ClassFile.of();
+        var actualVersion = cc.parse(StackMapsTest.class.getResourceAsStream("/testdata/Pattern1.class").readAllBytes());
 
         //test transformation to class version 49 with removal of StackMapTable attributes
-        var version49 = Classfile.parse(actualVersion.transform(ClassTransform.transformingMethodBodies(CodeTransform.ACCEPT_ALL)
-                .andThen(ClassTransform.endHandler(clb -> clb.withVersion(49, 0)))));
-        assertFalse(ClassPrinter.toTree(version49, ClassPrinter.Verbosity.CRITICAL_ATTRIBUTES).walk().anyMatch(n -> n.name().equals("stack map frames")));
+        var version49 = cc.parse(cc.transform(
+                                    actualVersion,
+                                    ClassTransform.transformingMethodBodies(CodeTransform.ACCEPT_ALL)
+                                                  .andThen(ClassTransform.endHandler(clb -> clb.withVersion(49, 0)))));
+        assertFalse(ClassPrinter.toTree(version49, ClassPrinter.Verbosity.CRITICAL_ATTRIBUTES)
+                                .walk().anyMatch(n -> n.name().equals("stack map frames")));
 
         //test transformation to class version 50 with re-generation of StackMapTable attributes
-        assertEmpty(Classfile.parse(version49.transform(ClassTransform.transformingMethodBodies(CodeTransform.ACCEPT_ALL)
-                .andThen(ClassTransform.endHandler(clb -> clb.withVersion(50, 0))))).verify(null));
+         assertEmpty(cc.verify(cc.transform(
+                                    version49,
+                                    ClassTransform.transformingMethodBodies(CodeTransform.ACCEPT_ALL)
+                                                  .andThen(ClassTransform.endHandler(clb -> clb.withVersion(50, 0))))));
+    }
+
+    @Test
+    void testInvalidAALOADStack() {
+        ClassFile.of().build(ClassDesc.of("Test"), clb
+                -> clb.withMethodBody("test", ConstantDescs.MTD_void, 0, cob
+                        -> cob.bipush(10)
+                              .anewarray(ConstantDescs.CD_Object)
+                              .lconst_1() //long on stack caused NPE, see 8320618
+                              .aaload()
+                              .astore(2)
+                              .return_()));
     }
 
     private static final FileSystem JRT = FileSystems.getFileSystem(URI.create("jrt:/"));
 
-    private static void testTransformedStackMaps(String classPath, Classfile.Option... options) throws Exception {
+    private static void testTransformedStackMaps(String classPath, ClassFile.Option... options) throws Exception {
         testTransformedStackMaps(
                 classPath.startsWith("/")
-                        ? StackMapsTest.class.getResourceAsStream(classPath).readAllBytes()
-                        : Files.readAllBytes(JRT.getPath(classPath)),
+                            ? StackMapsTest.class.getResourceAsStream(classPath).readAllBytes()
+                            : Files.readAllBytes(JRT.getPath(classPath)),
                 options);
     }
 
-    private static void testTransformedStackMaps(byte[] originalBytes, Classfile.Option... options) throws Exception {
+    private static void testTransformedStackMaps(byte[] originalBytes, ClassFile.Option... options) throws Exception {
         //transform the class model
-        var classModel = Classfile.parse(originalBytes, options);
-        var transformedBytes = Classfile.build(classModel.thisClass().asSymbol(), List.of(options),
-                cb -> {
+        ClassFile cc = ClassFile.of(options);
+        var classModel = cc.parse(originalBytes);
+        var transformedBytes = cc.build(classModel.thisClass().asSymbol(),
+                                               cb -> {
 //                                                   classModel.superclass().ifPresent(cb::withSuperclass);
 //                                                   cb.withInterfaces(classModel.interfaces());
 //                                                   cb.withVersion(classModel.majorVersion(), classModel.minorVersion());
-                    classModel.forEachElement(cb);
-                });
+                                                   classModel.forEachElement(cb);
+                                               });
 
         //then verify transformed bytecode
-        assertEmpty(Classfile.parse(transformedBytes).verify(null));
+        assertEmpty(cc.verify(transformedBytes));
+    }
+
+    @Test
+    void testInvalidStack() throws Exception {
+        //stack size mismatch
+        assertThrows(IllegalArgumentException.class, () ->
+                ClassFile.of().build(ClassDesc.of("Test"), clb ->
+                    clb.withMethodBody("test",
+                                       MethodTypeDesc.ofDescriptor("(Z)V"),
+                                       ClassFile.ACC_STATIC,
+                                       cb -> {
+                                           Label target = cb.newLabel();
+                                           Label next = cb.newLabel();
+                                           cb.iload(0);
+                                           cb.ifeq(next);
+                                           cb.constantInstruction(0.0d);
+                                           cb.goto_(target);
+                                           cb.labelBinding(next);
+                                           cb.constantInstruction(0);
+                                           cb.labelBinding(target);
+                                           cb.pop();
+                                       })));
+        //stack content mismatch
+        assertThrows(IllegalArgumentException.class, () ->
+                ClassFile.of().build(ClassDesc.of("Test"), clb ->
+                    clb.withMethodBody("test",
+                                       MethodTypeDesc.ofDescriptor("(Z)V"),
+                                       ClassFile.ACC_STATIC,
+                                       cb -> {
+                                           Label target = cb.newLabel();
+                                           Label next = cb.newLabel();
+                                           cb.iload(0);
+                                           cb.ifeq(next);
+                                           cb.constantInstruction(0.0f);
+                                           cb.goto_(target);
+                                           cb.labelBinding(next);
+                                           cb.constantInstruction(0);
+                                           cb.labelBinding(target);
+                                           cb.pop();
+                                       })));
     }
 }
